--- a/src/IDPC/ContractualBundle/Resources/views/Declaracion/showByPago.html.twig
+++ b/src/IDPC/ContractualBundle/Resources/views/Declaracion/showByPago.html.twig
@@ -32,7 +32,7 @@
         <tr>
             <th></th>
             <td><br>
-                <iframe src="http://docs.google.com/gview?url=http://contratacion/{{ asset('uploads/documents/') }}{{ entity.path }}&embedded=true" style="width:600px; height:500px;" frameborder="0"></iframe></td>
+                <iframe src="http://docs.google.com/gview?url=http://190.26.194.251/scontratos/current/web/{{ asset('uploads/documents/') }}{{ entity.path }}&embedded=true" style="width:600px; height:500px;" frameborder="0"></iframe></td>
         </tr>
     </tbody>
 </table>
