--- a/src/IDPC/ContractualBundle/Resources/views/Certificacion/pdf.html.twig
+++ b/src/IDPC/ContractualBundle/Resources/views/Certificacion/pdf.html.twig
@@ -1,12 +1,12 @@
 	<head>
 		<meta charset="utf-8" />
 		<!--basic styles-->
-                <link href="/css/estilos.css" rel="stylesheet" type="text/css" />
+                <link href="{{asset('/css/estilos.css')}}" rel="stylesheet" type="text/css" />
         </head>         
 {% block body -%}
 <table class="tablatitulo" width="100%">
   <tr>
-    <td rowspan="3"><div align="center"><img src="/img/logoreportheader.png" width="125" height="108" /></div></td>
+    <td rowspan="3"><div align="center"><img src="{{asset('/img/logoreportheader.png')}}" width="125" height="108" /></div></td>
     <td rowspan="3"><b><p align="center">CERTIFICACIÓN PARA EFECTOS DE DISMINUCIÓN<br> DE LA BASE DE RETENCIÓN EN LA FUENTE</p>
     </b></td>
     <td><p>Código: </p></td>
