--- a/src/IDPC/ContractualBundle/Resources/views/Cumplimiento/certificado.html.twig
+++ b/src/IDPC/ContractualBundle/Resources/views/Cumplimiento/certificado.html.twig
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Untitled Document</title>
+		<link rel="stylesheet" href="{{asset('css/htmltopdf.css')}}" />
 <link href="estilos.css" rel="stylesheet" type="text/css" />
 </head>
 
