--- a/src/Security/SecurityBundle/Resources/views/Security/login.html.twig
+++ b/src/Security/SecurityBundle/Resources/views/Security/login.html.twig
@@ -69,7 +69,7 @@
 											            <input type="hidden" name="_csrf_token" value="{ csrf_token }}" />
 														<label>
 															<span class="block input-icon input-icon-right">
-																<input type="text" class="span12" placeholder="{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}" id="username" name='_username' />
+																<input type="text" class="span12" placeholder="Usuario" id="username" name='_username' />
 																<i class="icon-user"></i>
 															</span>
 														</label>
@@ -78,7 +78,7 @@
 
 														<label>
 															<span class="block input-icon input-icon-right">
-																<input type="password" class="span12" id="password" name="_password" placeholder="{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}"  />
+																<input type="password" class="span12" id="password" name="_password" placeholder="password"  />
 																<i class="icon-lock"></i>
 															</span>
 														</label>
