--- a/src/IDPC/ContractualBundle/Resources/views/Pago/edit.html.twig
+++ b/src/IDPC/ContractualBundle/Resources/views/Pago/edit.html.twig
@@ -4,33 +4,46 @@
 
 <div class="widget-box">
     <div class="widget-header">
-        <h4>Editar Pago</h4>
+        <h4>Editar Pago por {{entity.valor}}</h4>
     </div>
-    <form action="{{ path('pago_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
-        <input type="hidden" name="_method" value="PUT" />
-        <div class="widget-body">
-            <div class="widget-main no-padding">
+    <div class="widget-body">
+    <form class="form-horizontal" role="form" action="{{ path('pago_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
+    <input type="hidden" name="_method" value="PUT" />
+
                 <div class="validation">{{ form_errors(edit_form) }}</div>
-                <fieldset>
-                    {{ form_label(edit_form.numeroPago)}}
-                    {{ form_widget(edit_form.numeroPago)}}
-                </fieldset>
-                {{form_widget(edit_form._token)}}
+         
+                <div class="form-group">
+                <label class="col-sm-3 control-label no-padding-right" for="form-field-1">{{ form_label(edit_form.numeroPago)}}</label>    
+                <div class="col-sm-9">
+	        {{ form_widget(edit_form.numeroPago)}}
+		</div></div>         
+               
+                <div class="form-group">
+                <label class="col-sm-3 control-label no-padding-right" for="form-field-1">{{ form_label(edit_form.diasPagados)}}</label>    
+                <div class="col-sm-9">
+	         {{ form_widget(edit_form.diasPagados)}}
+		</div>
+                {{ form_errors(edit_form.diasPagados) }}
+                </div>
                 
+                <div class="form-group">
+                <label class="col-sm-3 control-label no-padding-right" for="form-field-1">{{ form_label(edit_form.fechaInicio)}}</label>    
+                <div class="col-sm-9">
+	        {{ form_widget(edit_form.fechaInicio)}}
+		</div>
+                {{ form_errors(edit_form.fechaInicio) }}
+                </div>  
+                
+                {{form_widget(edit_form._token)}}
                     <div class="form-actions">
                         <button type="submit" value="Crear" class="btn btn-sm btn-success">
-                        Crear
+                        Guardar
                             <i class="icon-arrow-right icon-on-right bigger-110"></i>
                         </button>
                     </div>
                 
+            </form>
             </div>
-                
-            </div>
-        
-    </form>
-
-        
     </div>
 {% endblock %}
 {% block breadcumbs %}
