--- a/src/IDPC/ContractualBundle/Resources/views/Cumplimiento/showByPago.html.twig
+++ b/src/IDPC/ContractualBundle/Resources/views/Cumplimiento/showByPago.html.twig
@@ -22,6 +22,12 @@
                             <div class="profile-info-value">{{ entity.planilla }}</div>
 
                         </div>
+                        <div class="profile-info-row">
+                            <div class="profile-info-name">Ver Certificado</div>
+                            <div class="profile-info-value"><a href="{{ asset('uploads/documents/') }}{{ entity.path }}" target="_blank" >Ver documento</a></div>
+
+                        </div>
+                        
                     </div>
                 </div>
                 <div class="widget-toolbox padding-8 clearfix">
